contracts/raffle/test_out.txt
   Compiling hello-world v0.0.0 (C:\Users\HP\Desktop\tikka-contracts\contracts\raffle)
error[E0425]: cannot find value `admin_client` in this scope
   --> contracts\raffle\src\instance\test.rs:764:50
    |
762 |     let (client, creator, buyer, _admin_client, _, _) =
    |                                  ------------- `_admin_client` defined here
763 |         setup_raffle_env(&env, RandomnessSource::Internal, None, 0, None);
764 |     let token_client = token::Client::new(&env, &admin_client.address);
    |                                                  ^^^^^^^^^^^^
    |
help: the leading underscore in `_admin_client` marks it as unused, consider renaming it to `admin_client`
    |
762 -     let (client, creator, buyer, _admin_client, _, _) =
762 +     let (client, creator, buyer, admin_client, _, _) =
    |

warning: unused imports: `Bytes`, `IntoVal`, and `Symbol`
 --> contracts\raffle\src\instance\test.rs:6:21
  |
6 |     token, Address, Bytes, Env, IntoVal, String, Symbol,
  |                     ^^^^^       ^^^^^^^          ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ContractError`, `RaffleFactoryClient`, and `RaffleFactory`
 --> contracts\raffle\src\instance\test.rs:8:13
  |
8 | use crate::{RaffleFactory, RaffleFactoryClient, ContractError};
  |             ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
  --> contracts\raffle\src\instance\mod.rs:92:18
   |
92 |     env.events().publish(
   |                  ^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `soroban_sdk::events::Events::publish`: use the #[contractevent] macro on a contract event type
  --> contracts\raffle\src\lib.rs:40:18
   |
40 |     env.events().publish(
   |                  ^^^^^^^

warning: unused variable: `admin_client`
   --> contracts\raffle\src\instance\test.rs:438:24
    |
438 |     let (client, _, _, admin_client, _, _) =
    |                        ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_admin_client`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `hello-world` (lib test) generated 5 warnings
error: could not compile `hello-world` (lib test) due to 1 previous error; 5 warnings emitted
